# cstruct

./: .cmake-format.json  .gitignore  CMakeLists.txt  README.md  Taskfile.yml
example/: CMakeLists.txt  main.c
include/jcsw/: binpack.h
src/: binpack.c  cstruct.c  cstruct.h
test/: CMakeLists.txt  cstruct_sizeof.test.c
